# audibro

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  config.toml  watch-receiver-graph.html
data/: license-metal-metal-dark-matter.txt  license-nature-calls.txt  license-pop-fun-punk-opener.txt
design/: design.drawio
docs/: ADVANCED.md  LIMITATIONS.md  LOGGING.md
env/: data.input
scripts/: clear-ids.sh  clear-logs.sh  run-receiver-bob-from-alice.sh  run-receiver-carol-from-bob.sh  run-receiver-from-file.sh  run-receiver-lojza.sh  run-receiver-tonda-as-tondach.sh  run-receiver.sh  run-receiver2.sh  run-sender-alice.sh  run-sender-bob.sh  run-sender-lojza.sh  run-sender-to-file.sh  run-sender-tonda.sh  run-sender.sh  run-tui-receiver-bob-from-alice-docker.sh  run-tui-receiver-bob-from-alice.sh  run-tui-receiver-carol-from-bob-docker.sh  run-tui-receiver-carol-from-bob.sh  run-tui-receiver-tonda-remote.sh  run-tui-receiver-tonda.sh  run-tui-sender-alice.sh  run-tui-sender-tonda.sh  run-tui-tonda.sh  watch-receiver-graph.html
src/: audio_source.rs  block_signer.rs  common.rs  config.rs  diag_server.rs  horst.rs  main.rs  merkle_tree.rs  net_receiver.rs  net_sender.rs  receiver.rs  sender.rs  sliding_buffer.rs  traits.rs  tui.rs  utils.rs
tests/: requirements.txt  tests.py
tests/scenarios/: recerify_01.txt  reunverify_01.txt  reverify_01.txt  sc_001.txt  sc_002.txt
