[package]
edition = "2021"
name = "audibro"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hashsig = {git = "ssh://git@github.com/FrankMejzlik/hashsig.git", branch = "master" }
hashsig = { path = "../hashsig/", features = [
	"log_input_output",
	#"simulate_out_of_order",
	#"simulate_fake_msgs",
	"log_input_output",
] }
clap = { version = "3.2", features = ["derive"] }
sha3 = "0.10"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rand_core = "0.6.4"
log = { version = "0.4", features = [
	"max_level_debug",
	"release_max_level_info",
] }
hex = "0.4"
chrono = "0.4"
fern = { version = "0.6" }
byteorder = "1.4"
bitreader = "0.3"
cfg-if = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
slice-of-array = "0.3"
tokio = { version = "1.21", features = ["full"] }
tungstenite = "0.18"
ctrlc = "3.2"
rand = "0.8"
lazy_static = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde-big-array = "0.5"

[features]
default = ["debug", "simulate_stdin"]
debug = []
simulate_stdin = []
