[package]
edition = "2021"
name = "audibro"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hab = {git = "ssh://git@github.com/FrankMejzlik/hab.git", branch = "master" }
hab = { path = "../hab/", features = [
	#"print_times", 
	"log_input_output",
	#"store_state",
	#"simulate_out_of_order",
	#"simulate_fake_msgs",
] }
clap = { version = "3.2", features = ["derive"] }
sha3 = "0.10"
sha2 = "0.10"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rand_core = "0.6.4"
log = { version = "0.4", features = [
	"max_level_debug",
	"release_max_level_debug",
] }
hex = "0.4"
chrono = "0.4"
fern = { version = "0.6" }
byteorder = "1.4"
bitreader = "0.3"
cfg-if = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
slice-of-array = "0.3"
tokio = { version = "1.21", features = ["full"] }
tungstenite = "0.18"
ctrlc = "3.2"
rand = "0.8"
lazy_static = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde-big-array = "0.5"
crossterm = "0.26"
minimp3 = "0.5"
rodio = "0.17"
toml = "0.7"

[features]
default = ["debug"]
debug = []
simulate_stdin = []
