[package]
edition = "2021"
name = "audibro"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hab = { git = "https://gitlab.mff.cuni.cz/mejzlikf/hab.git", branch = "master", features = [
	#"print_times", 
	"log_input_output",
	"store_state",
	#"simulate_out_of_order",
	#"simulate_fake_msgs",
] }
clap = { version = "3.2", features = ["derive"] }
sha3 = "0.10"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
log = { version = "0.4", features = [
	"max_level_debug",
	"release_max_level_debug",
] }
chrono = "0.4"
fern = { version = "0.6" }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.2"
crossterm = "0.26"
minimp3 = "0.5"
rodio = "0.17"
toml = "0.7"
id3 = "1.7"

[features]
default = ["debug"]
debug = []
simulate_stdin = []
